fix issue with z-index on header

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -36,6 +36,8 @@ header {
   display: grid;
   grid-template-columns: 25% 50% 25%;
   filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5));
+  position: relative;
+  z-index: 2;
 }
 
 header ul {
@@ -141,8 +143,6 @@ header ul {
   margin: 0 auto;
   padding: 50px;
   box-shadow: 0 5px 10px black;
-  z-index: -1;
-  position: relative;
 }
 
 .btn-out {
@@ -443,10 +443,10 @@ header ul {
     align-items: center;
     position: absolute;
     top: 75px;
-    left: 73px;
+    left: 77px;
     border-radius: 50px;
     padding: 5px;
-    z-index: 100;
+    z-index: 5;
     clip-path: polygon(0 0%, 100% 0, 100% 0%, 0 0%);
     transition: clip-path .5s;
   }
@@ -507,5 +507,7 @@ header ul {
   .container {
     max-width: 100%;
     padding: 25px;
+    position: relative;
+    z-index: 1;
   }
 }
